c2dascript-transpile/tests/snapshots/snapshots__transpile@records.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/records.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, false); declaration=union_declaration; cause=aggregate C object rvalue from raw storage is not implemented

--> ./tests/snapshots/records.c:53:1
