c2dascript-transpile/tests/snapshots/snapshots__transpile@return_addr_helpers.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/return_addr_helpers.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(43) }, [], false, false, true); declaration=extract; cause=unsupported external call: raw_addr
--> ./tests/snapshots/return_addr_helpers.c:4:42

--> ./tests/snapshots/return_addr_helpers.c:3:1
