c2dascript-transpile/tests/snapshots/snapshots__transpile@return_address.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/return_address.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(43) }, [], false, false, true); declaration=direct_caller; cause=unsupported builtin __builtin_return_address
--> ./tests/snapshots/return_address.c:2:12

--> ./tests/snapshots/return_address.c:1:1
